don't use deprecated Double methods